@@ -97,6 +97,61 @@
          ],
          name => 'MyISAM Indexes',
       },
+      {  name =>    'MyISAM Key Cache',
+         base_value => '1024',
+         hash       => 'hash_00_VER_dbc5506d88251f8ebd30383df899b8f4',
+         dt         => {
+            hash  => 'hash_01_VER_2a166b28a2a2f7fb86979297b8fceee9',
+            key_buffer_size => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_6bae90932003f950f8e3fbbe7637d9c5',
+            },
+            Key_buf_bytes_used => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_bc85598a8d5abbbe8ea9e58b7948e3f3',
+            },
+            Key_buf_bytes_unflushed => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_8cef3c9bdc8cd05da6ed60abfc80f2db',
+            },
+            input => 'Get MySQL Stats',
+         },
+         items => [
+            {  item => 'key_buffer_size',
+               color  => '99B898',
+               type => 'AREA',
+               hashes => [
+                  'hash_10_VER_058386466257a993b4348aab5726ec68',
+                  'hash_10_VER_b0b166e1a842067ebbdab93b1dbf27b8',
+                  'hash_10_VER_d757763ec6539e5afe5a79600db4b3c2',
+                  'hash_10_VER_aba2c7a1970c15a720a8599d5bf2fa18',
+               ],
+               task => 'hash_09_VER_f6ad9c10473db3b3577bc1af836cc88c',
+            },
+            {  item => 'Key_buf_bytes_used',
+               color  => '2A363B',
+               type => 'AREA',
+               hashes => [
+                  'hash_10_VER_30175af870313029c80f2d846d593fc9',
+                  'hash_10_VER_e856d85dd1b7931fc0f17015e2b53b0c',
+                  'hash_10_VER_6ce72ea3e6e20917efb0ff315679b647',
+                  'hash_10_VER_367a39c7968c9c3713002ba8117a25b2',
+               ],
+               task => 'hash_09_VER_2f08fc06e6dc8de6954552a991c67917',
+            },
+            {  item => 'Key_buf_bytes_unflushed',
+               color  => 'FECEA8',
+               type => 'AREA',
+               hashes => [
+                  'hash_10_VER_72772c0f4270aab1fc2c571d1abe6b46',
+                  'hash_10_VER_4ec8d1571e9e57edf9f26905af8a9970',
+                  'hash_10_VER_4ab1fc7c653c0141965383b00d38dab2',
+                  'hash_10_VER_e072da0ecd0ff72854235acd6c2884c7',
+               ],
+               task => 'hash_09_VER_cdca8a2e5712ee4a2ad7b237c0988515',
+            },
+         ],
+      },
       {  base_value => '1024',
          name => 'InnoDB Buffer Pool',
          # Color palette: http://www.colourlovers.com/palette/354987/DSH
@@ -2903,6 +2958,9 @@
             lock_system_memory         => 'hash_07_VER_54486eaaedede6d14c7de6dafcc64b33',
             recovery_system_memory     => 'hash_07_VER_7a94297b1c34a81e88be5f5b8cda6ec2',
             thread_hash_memory         => 'hash_07_VER_268e082bc9cbcf84096010ec2fbd64cc',
+            Key_buf_bytes_unflushed    => 'hash_07_VER_7000de3d1c2c39b2de8f416f19deafb9',
+            Key_buf_bytes_used         => 'hash_07_VER_5b82c29de4b0d8eaeb84ed8c301cebf2',
+            key_buffer_size            => 'hash_07_VER_1a2d33907bf06696b69cb8e15115f689',
          },
          type_id => 1
       },
